CHANGELOG
--------------------------

ClanSphere 2010.0 >> 2010-XX-XX
___________________________________________________________

-> Fixed template caching in some situations (hajo, schiri)
-> Updated CKEditor to 3.3.1 (hajo)


ClanSphere 2010.0 beta 1 >> 2010-06-19
___________________________________________________________

-- Recommended PHP version changed to 5.3.2
-- Required PHP version changed to 5.0

-> Added a medals list (duriel)
-> Added mail-function to subscription (spongebob)
-> Added board/navtop2 (spongebob)
-> Added verification for users birthdate (spongebob)
-> Added date to files/navlist (spongebob)
-> Added fightus and joinus to users/navlogin (spongebob)
-> Added automatically jump to the first unread comment of the thread (spongebob)
-> Added notifymods-module (spongebob)
-> Added email-notifications (notifymods-module) to fight us, guestbook, join us, download (spongebob)
-> Added articles/navtop (spongebob)
-> Added delete mirror checkbox to files/edit (spongebob)
-> Added top9 (order) to abcode (spongebob)
-> Added thread author annotation to board/thread (spongebob)
-> Added search for clan names to clans/manage (spongebob)
-> Added usergallery/top (spongebob)
-> Added an admin menu to manage, create and option pages (gahero)
-> Added a user list to the access module for displaying and adding users to an access (gahero)
-> Added and improved many modules icons (gahero)
-> Added replay mirror names addition provided by aschti (hajo)
-> Added possibility to use features.php for print views (hajo)
-> Added charset page to check for possible charset related problems (hajo)
-> Added SMTP authentication with user and password for send mails (hajo)
-> Added SQLite 3 support via sqlite3 php extension (hajo)
-> Added XSRF protection to every html form with method=post
-> Fixed board-counter after delete a thread (spongebob)
-> Fixed delete own board/subscription and board/attachments (spongebob)