@@ -26,13 +26,18 @@ else {
   $data['options'] = cs_sql_option(__FILE__, 'contact');
   $data['sendmail']['path'] = ini_get('sendmail_path');
 
+  $data['mailsig']['url'] = cs_url('contact','mailsig_edit');
+  if(file_exists('uploads/imprint/mailsig.txt'))
+    $data['mailsig']['date'] = cs_date('unix',filemtime('uploads/imprint/mailsig.txt') - date('Z'),1);
+  else
+    $data['mailsig']['date'] = '-';
+
   $date = '-';
   if (file_exists('uploads/imprint/imprint.txt')) {
     $content = file_get_contents('uploads/imprint/imprint.txt');
     $imprint = explode("{laststandbreak}", $content);
     $date = cs_date('unix',$imprint[0],1);
   }
-
   $data['imprint']['date'] = cs_secure($date);
   $data['imprint']['url'] = cs_url('contact','imp_edit');
 
