@@ -4,7 +4,10 @@ CHANGELOG
 ClanSphere 2010.0 >> 2010-XX-XX
 ___________________________________________________________
 
+-> Added mail signature that is added to the end of every mail (hajo)
+-> Fixed maintenance mode in some situations (schiri)
 -> Fixed template caching in some situations (hajo, schiri)
+-> Moved imprint edit link from manage to options (hajo)
 -> Updated CKEditor to 3.3.1 (hajo)
 
 
